--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,6 @@
   </li>
 </ul>
 
+<button mat-raised-button type="button" color="primary" (click)="solicitarCotizacion()">Solicitar Cotización</button>
+
 <router-outlet></router-outlet>
